refactors the lib for PHP 7 combatibility
also add new method replaceFirstOccurrence() to class Str

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,6 @@
   "type": "library",
   "description": "Small library with several classes which I use in my private projects.",
   "require": {
-    "php": "^5.3.3 || ^7.0"
+    "php": "^7.0"
   }
 }
